force-app/main/default/objects/SMS_Provisioned_Product_History__c/SMS_Provisioned_Product_History__c.object-meta.xml
<CustomObject>
    <label>SMS Provisioned Product History</label>
    <nameField>
        <displayFormat>ProvHistory-{00000000}</displayFormat>
        <label>SMS Provisioned Product History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Provisioned Product History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>