force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/MRIS_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Subscription_Id__c</fullName>
    <label>MRIS Subscription Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>