force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>SMS_Order__c</referenceTo>
    <relationshipLabel>SMS Provisioned Product History</relationshipLabel>
    <relationshipName>SMS_Provisioned_Product_History</relationshipName>
    <type>Lookup</type>
</CustomField>