force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Reinstate</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>