force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Product_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Reason__c</fullName>
    <label>Product Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription Terminated</fullName>
            </value>
            <value>
                <fullName>Subscription Auto-Suspended</fullName>
            </value>
            <value>
                <fullName>Staff Terminated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Subscription Reinstated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>