force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Provisioned_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Product_Id__c</fullName>
    <label>Provisioned Product Id</label>
    <referenceTo>SMS_Provisioned_Product__c</referenceTo>
    <relationshipLabel>SMS Provisioned Product History</relationshipLabel>
    <relationshipName>SMS_Provisioned_Product_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>