force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/RealPing_Id__c.field-meta.xml
<CustomField>
    <fullName>RealPing_Id__c</fullName>
    <label>RealPing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>