force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Response_Product_Logging__c.field-meta.xml
<CustomField>
    <fullName>Response_Product_Logging__c</fullName>
    <label>Response Product Logging</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>