force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS Provisioned Product History</relationshipLabel>
    <relationshipName>SMS_Provisioned_Product_History</relationshipName>
    <type>Lookup</type>
</CustomField>