force-app/main/default/objects/SMS_Provisioned_Product_History__c/fields/XactSite_Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>XactSite_Salesperson_Name__c</fullName>
    <label>XactSite Salesperson Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>